# TF-PSA-Crypto

./: .gitignore  .gitmodules  BRANCHES.md  BUGS.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  DartConfiguration.tcl  README.md  SECURITY.md  SUPPORT.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
ChangeLog.d/: 10012.txt  10087.txt  168.txt  8151.txt  8154.txt  9320.txt  9321.txt  9322.txt  9323.txt  9382.txt  9618.txt  9973.txt  add-asn1-parsing-function.txt  add-everest-headers.txt  add-fuzz-progs.txt  add-psa-iop-export-public-key.txt  add-rsa-progs.txt  add-version-macros.txt  asn1-write-integer.txt  chacha20-neon.txt  change-everest-headers-path.txt  config-version.txt  configuration-split.txt  ctr_drbg_reseed.txt  driver-fix-few-wrappers.txt  driver-init-free.txt  ec-curves-support-removal.txt  ecdsa-policies.txt  entropy-options.txt  entropy-removals.txt  error-code-psa-aliases.txt  error-code-unified.txt  error-unification.txt  fix-asn1-store-named-data.txt  fix-dependency-on-driver-wrappers.txt  fix-pk.txt  fix-unnecessary-include-client-only.txt  issue345.txt  issue376.txt  legacy-crypto-options-removal.txt  (+27 more)
cmake/: PSACryptoConfig.cmake.in
configs/: README.txt  ccm-aes-sha256-secp256r1.h  ccm-aes-sha256.h  crypto-config-ccm-aes-sha256.h  crypto-config-symmetric-only.h  gcm-ccm-cbc-aes-sha256_512-secp256_384r1-rsa.h
configs/ext/: README.md  crypto_config_profile_medium.h
core/: CMakeLists.txt  alignment.h  common.h  psa_crypto.c  psa_crypto_core.h  psa_crypto_driver_wrappers.h  psa_crypto_invasive.h  psa_crypto_random_impl.h  psa_crypto_se.h  psa_crypto_slot_management.c  psa_crypto_slot_management.h  psa_crypto_storage.c  psa_crypto_storage.h  tf_psa_crypto_check_config.h  tf_psa_crypto_common.h  tf_psa_crypto_config.c  tf_psa_crypto_version.c
docs/: 1.0-migration-guide.md  driver-only-builds.md  psa-transition.md
docs/4.0-migration-guide/: README  configuration.md  entropy.md  error-codes.md  feature-removals.md  function-prototype-changes-for-psa.md  function-prototype-changes.md  md-pk.md  md.md  oid.md  pake.md  pk-rm-crypt.md  pk.md  platform-entropy-gathering.md  private-decls.md  private-modules.md  psa-only.md  repo-split.md  rng-removal.md  rng.md  threading.md
doxygen/: psacrypto.doxyfile  psacrypto.doxyfile.in  tfpsacrypto.doxyfile.in
drivers/: CMakeLists.txt
drivers/builtin/: CMakeLists.txt  config_psa_ext.h  mbedtls_config.h
drivers/builtin/include/: CMakeLists.txt
drivers/builtin/include/mbedtls/: aes.h  aria.h  asn1.h  asn1write.h  base64.h  bignum.h  block_cipher.h  build_info.h  camellia.h  ccm.h  chacha20.h  chachapoly.h  cipher.h  cmac.h  compat-2.x.h  config_adjust_legacy_crypto.h  config_adjust_legacy_from_psa.h  config_adjust_mbedtls_from_psa_crypto.h  config_adjust_mbedtls_from_tf_psa_crypto.h  config_adjust_psa_superset_legacy.h  config_adjust_test_accelerators.h  config_psa.h  config_psa.h.bak  crypto_oid.h  ctr_drbg.h  des.h  dhm.h  ecdh.h  ecdsa.h  ecjpake.h  ecp.h  entropy.h  error_common.h  gcm.h  hkdf.h  hmac_drbg.h  lms.h  md.h  md5.h  memory_buffer_alloc.h  (+20 more)
drivers/builtin/include/mbedtls/private/: aes.h  aria.h  bignum.h  block_cipher.h  camellia.h  ccm.h  chacha20.h  chachapoly.h  cipher.h  cmac.h  config_adjust_legacy_from_psa.h  config_adjust_psa_superset_legacy.h  config_adjust_test_accelerators.h  config_psa.h  ctr_drbg.h  des.h  ecdh.h  ecdsa.h  ecjpake.h  ecp.h  entropy.h  error_common.h  gcm.h  hmac_drbg.h  md5.h  pkcs5.h  poly1305.h  ripemd160.h  rsa.h  sha1.h  sha256.h  sha3.h  sha512.h
drivers/builtin/src/: aes.c  aesce.h  aesni.h  alignment.h  aria.c  asn1parse.c  asn1write.c  base64.c  base64_internal.h  bignum.c  bignum_core.c  bignum_core.h  bignum_core_invasive.h  bignum_internal.h  bignum_mod.c  bignum_mod.h  bignum_mod_raw.c  bignum_mod_raw.h  bignum_mod_raw_invasive.h  block_cipher.c  block_cipher_internal.h  bn_mul.h  camellia.c  ccm.c  chacha20.c  chachapoly.c  check_crypto_config.h  cipher.c  cipher_invasive.h  cipher_wrap.c  cipher_wrap.h  cmac.c  constant_time.c  constant_time_impl.h  constant_time_internal.h  crypto_oid.h  ctr.h  ctr_drbg.c  des.c  ecdh.c  (+62 more)
drivers/everest/: CMakeLists.txt  Makefile.inc
drivers/everest/include/tf-psa-crypto/private/everest/: everest.h  x25519.h
drivers/p256-m/: CMakeLists.txt  p256-m_driver_entrypoints.h
drivers/p256-m/p256-m/: p256-m.h
include/: CMakeLists.txt
include/mbedtls/: asn1.h  asn1write.h  base64.h  compat-3-crypto.h  compat-3.h  constant_time.h  lms.h  md.h  memory_buffer_alloc.h  nist_kw.h  pem.h  pk.h  platform.h  platform_threading.h  platform_time.h  platform_util.h  psa_util.h  threading.h
include/mbedtls/private/: crypto_unified_errors.h  pk.h  pk_private.h
include/psa/: build_info.h  crypto.h  crypto_adjust_config_dependencies.h  crypto_adjust_config_derived.h  crypto_adjust_config_key_pair_types.h  crypto_adjust_config_synonyms.h  crypto_builtin_composites.h  crypto_builtin_key_derivation.h  crypto_builtin_primitives.h  crypto_compat.h  crypto_config.h  crypto_driver_random.h  crypto_extra.h  crypto_platform.h  crypto_sizes.h  crypto_struct.h  crypto_types.h  crypto_unified_errors.h  crypto_values.h  platform.h  version.h.in
include/tf-psa-crypto/: build_info.h  check_config.h  psa_build_info.h  psa_check_config.h  tf_psa_crypto_version.h  version.h
include/tf_psa_crypto/: platform.h  version.h.in
pkgconfig/: tfpsacrypto.pc.in
programs/: .gitignore  CMakeLists.txt  README.md
programs/fuzz/: onefile.c  (+5 more)
programs/pkey/: CMakeLists.txt
programs/test/: CMakeLists.txt  benchmark.c  dlopen.c  tfpsacrypto_dlopen.c  which_aes.c
programs/test/cmake_package/: CMakeLists.txt  cmake_package.c
programs/test/cmake_package_install/: CMakeLists.txt  cmake_package_install.c
programs/test/cmake_subproject/: CMakeLists.txt  cmake_subproject.c
scripts/: bump_version.py  c_header_guards.py  config.py  configure_source_files.py  ecc-heap.sh  generate_config_checks.py  make_makefile.py  psa_crypto.py
tests/: CMakeLists.txt  Descriptions.txt  all_sh_components.txt
(+139 files in other folders)
